@@ -174,6 +174,12 @@ The following table summarizes the various endpoints with quick links to the app
 | N
 | <<./sftp.adoc#sftp-outbound-gateway,SFTP Outbound Gateway>>
 
+| *SMB*
+| <<./smb.adoc#smb-inbound,SMB Inbound Channel Adapter>>
+| <<./smb.adoc#smb-outbound,SMB Outbound Channel Adapter>>
+| N
+| N
+
 | *STOMP*
 | <<./stomp.adoc#stomp-inbound-adapter,STOMP Inbound Channel Adapter>>
 | <<./stomp.adoc#stomp-outbound-adapter,STOMP Outbound Channel Adapter>>
